salesforce/force-app/main/default/objects/Blog_Post__c/fields/Excerpt__c.field-meta.xml
<CustomField>
    <fullName>Excerpt__c</fullName>
    <label>Excerpt</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>