salesforce/force-app/main/default/objects/Blog_Post__c/fields/Published_At__c.field-meta.xml
<CustomField>
    <fullName>Published_At__c</fullName>
    <label>Published At</label>
    <type>Date</type>
</CustomField>