salesforce/force-app/main/default/objects/Blog_Post__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>