salesforce/force-app/main/default/objects/Blog_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Slug__c</columns>
    <columns>Author__c</columns>
    <columns>Published_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Blog Posts</label>
</ListView>